injectable/tests/ui/duplicate_registration.stderr
error: duplicate type `Database` registered in the container
 --> tests/ui/duplicate_registration.rs
  |
  | / container! {
  | |     Database,
  | |     Database,
  | | }
  | |_^
  |
  = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find attribute `injectable` in this scope
 --> tests/ui/duplicate_registration.rs
  |
  | #[injectable]
  |   ^^^^^^^^^^
  |
  = note: `injectable` is in scope, but it is a crate, not an attribute
